Fix header z-index

--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -3,6 +3,7 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 200;
   padding: 25px 0;
   background-color: $bg-30;
 
